new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -62,7 +62,7 @@ From top left to bottom right : Lego Mindstorm cables, RaspberyPi 4b + BrickPi, 
 
 We chose to separate the car's electronic system in two halves: one half would be the core of the car and would be linked to the motors, power them, and would take care of the DRL part of the project, and the second half would be here to cool the first part, as all the operations listed above are energy-consuming. 
 
-The core part consists of a Raspberry Pi 4b (we chose this device to be the center of all the operations because of its vast specifications compared to the Raspberry Pi 3b) and a card from dexter industries that manages the like with the lego technics. In contrast, the second part consists of a battery powering a raspberry pi 3 that powers a small fan, installed in between the two cards of the car's core. While using a Raspberry Pi 3 to power a fan seems a bit of an overkill; it also allows us convenient flexibility in programming, were we to decide to use a Master/slave architecture to compute the DRL part if the RP4 capped its power due to overheating. 
+The core part consists of a Raspberry Pi 4b (we chose this device to be the center of all the operations because of its vast specifications compared to the Raspberry Pi 3b) and a card from [Dexter Industries](https://www.dexterindustries.com/) that manages the link with the lego technics. In contrast, the second part consists of a battery powering a Raspberry Pi 3 that powers a small fan, installed in between the two cards of the car's core. While using a Raspberry Pi 3 to power a fan seems a bit of an overkill; it also allows us convenient flexibility in programming, were we to decide to use a Master/slave architecture to compute the DRL part if the RP4 capped its power due to overheating. 
 
 We then used a raspbian image, unaltered, with the convenient package Vncviewer, which allows us to access the raspbian of the pi via ssh protocol. From there, we can launch our script to make the car move.
 
@@ -159,7 +159,19 @@ Now that we knew that our car could learn to drive on its own, we wanted to make
 
 ## Structure 
 
-We kept the same main composants (Raspberry Pi 4, BrickPi and 3 motors) but changed the rest of the car. We used a [Lego Technic Porsche 911](https://www.amazon.fr/LEGO-Technic-Porsche-42096-construction/dp/B07FP6QNQ7/ref=asc_df_B07FP6QNQ7/?tag=googshopfr-21&linkCode=df0&hvadid=314587880581&hvpos=&hvnetw=g&hvrand=10330215336837655036&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9056237&hvtargid=aud-882886963594:pla-586194956307&psc=1&tag=&ref=&adgrpid=66274120487&hvpone=&hvptwo=&hvadid=314587880581&hvpos=&hvnetw=g&hvrand=10330215336837655036&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9056237&hvtargid=aud-882886963594:pla-586194956307) model as a base for the rest of the car. We removed the V6 engine and replaced it by the Raspberry Pi and the batteries. We also made some modifications to insert the Lego Rotor at the front, and the 2 Lego motors at the back. Using this as a baseline allows the car to be much more stable and with a more precise steering system. The first version also had a tendency to break at the middle of the chassis, this doesn't happen anymore. 
+We kept the same main composants (Raspberry Pi 4, BrickPi and 3 motors) but changed the rest of the car. We used a [Lego Technic Porsche 911](https://www.amazon.fr/LEGO-Technic-Porsche-42096-construction/dp/B07FP6QNQ7/ref=asc_df_B07FP6QNQ7/?tag=googshopfr-21&linkCode=df0&hvadid=314587880581&hvpos=&hvnetw=g&hvrand=10330215336837655036&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9056237&hvtargid=aud-882886963594:pla-586194956307&psc=1&tag=&ref=&adgrpid=66274120487&hvpone=&hvptwo=&hvadid=314587880581&hvpos=&hvnetw=g&hvrand=10330215336837655036&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9056237&hvtargid=aud-882886963594:pla-586194956307) model as a base for the rest of the car. 
+
+Our goal was to use the following blueprint : 
+
+<p align="center">
+  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/blueprint1.png">
+</p>
+
+<p align="center">
+  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/blueprint2.png">
+</p>
+
+We removed the V6 engine and replaced it by the Raspberry Pi and the batteries. We also made some modifications to insert the Lego Rotor at the front, and the 2 Lego motors at the back. Using this as a baseline allows the car to be much more stable and with a more precise steering system. The first version also had a tendency to break at the middle of the chassis, this doesn't happen anymore. 
 
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/car-v2-debut.jpeg">
@@ -169,7 +181,6 @@ We kept the same main composants (Raspberry Pi 4, BrickPi and 3 motors) but chan
 <em>
 Chassis of the PI-Mobile V2, with the 2 motors and the Raspberry Pi/BrickPi in the middle.</em>
 </center>
-
 
 # References :  
 
