new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -171,6 +171,11 @@ Our goal was to use the following blueprint :
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/blueprint2.png">
 </p>
 
+However, we had to make some modifications, mainly because of 2 things: 
+
+* The suspension system at the back of the car was not compatible with our Large motors
+* The case used for the Raspberry Pi + BrickPi  was not made for a Raspberry Pi 4, and therefore was not as robust as it should have been.
+
 We removed the V6 engine and replaced it by the Raspberry Pi and the batteries. We also made some modifications to insert the Lego Rotor at the front, and the 2 Lego motors at the back. Using this as a baseline allows the car to be much more stable and with a more precise steering system. The first version also had a tendency to break at the middle of the chassis, this doesn't happen anymore. 
 
 <p align="center">
