new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -187,6 +187,19 @@ We removed the V6 engine and replaced it by the Raspberry Pi and the batteries. 
 Chassis of the PI-Mobile V2, with the 2 motors and the Raspberry Pi/BrickPi in the middle.</em>
 </center>
 
+## The track 
+
+We wanted to be a bit more ambitious, and step aside from the small inside track we used for the first car. We used a small pathway around my home as a circuit. This pathway lies inside a large garden, making it easy to define where the car should drive, and makes a loop: exactly what we needed.
+
+<p align="center">
+  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/track-2.png">
+</p>
+
+<center>
+<em>
+Track used to gather data for the PI-Mobile V2. Track is around 400 meters long.</em>
+</center>
+
 # References :  
 
 1. [Wayve - Learning to Drive in a day](https://arxiv.org/pdf/1807.00412.pdf)
