new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -88,6 +88,8 @@ We used a Deep Q-learning agent to train our car to drive, with some miners modi
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/algo-1.png">
 </p>
 
+A more detailled explanation of Deep Reinforcement Learning is available on a previous blog post and paper.
+
 Regarding the reward, we used a simple function: 1 at every step, except when the car fails (-1) or when it reaches the end of the trach (time spent on the track). The goal is to drive correctly and as fast as it could. 
 
 ```java
@@ -205,3 +207,5 @@ Track used to gather data for the PI-Mobile V2. Track is around 400 meters long.
 1. [Wayve - Learning to Drive in a day](https://arxiv.org/pdf/1807.00412.pdf)
 2. [Wayve - Urban Driving with Conditional Imitation Learning](https://arxiv.org/pdf/1912.00177.pdf)
 3. [End-to-end Driving via Conditional Imitation Learning - Codevilla et al.](https://arxiv.org/pdf/1710.02410.pdf)
+
+# [Github Repository](to add)
