new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -202,6 +202,17 @@ We wanted to be a bit more ambitious, and step aside from the small inside track
 Track used to gather data for the PI-Mobile V2. Track is around 400 meters long.</em>
 </center>
 
+<p align="center">
+  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/ex-road.jpeg">
+</p>
+
+We would then use the rest of the pathway for testing our model. An example of such pathway is available below : 
+
+<center>
+<em>
+Example of the road used for the second track</em>
+</center>
+
 # References :  
 
 1. [Wayve - Learning to Drive in a day](https://arxiv.org/pdf/1807.00412.pdf)
