new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -213,6 +213,10 @@ We would then use the rest of the pathway for testing our model. An example of s
 Example of the road used for the second track</em>
 </center>
 
+Now that we have a new car and a new track, it is time to talk about the models we used to make our car autonomous.
+
+## Imitation Learning
+
 # References :  
 
 1. [Wayve - Learning to Drive in a day](https://arxiv.org/pdf/1807.00412.pdf)
