--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -216,12 +216,16 @@ Example of the road used for the second track</em>
 
 Now that we have a new car and a new track, it is time to talk about the models we used to make our car autonomous.
 
-## Imitation Learning
+## Imitation Learning and Conditional Imitation Learning
+
+### Imitation Learning
+
+
 
 # References :  
 
-1. [Wayve - Learning to Drive in a day](https://arxiv.org/pdf/1807.00412.pdf)
-2. [Wayve - Urban Driving with Conditional Imitation Learning](https://arxiv.org/pdf/1912.00177.pdf)
+1. [Learning to Drive in a day - Wayve](https://arxiv.org/pdf/1807.00412.pdf)
+2. [Urban Driving with Conditional Imitation Learning - Wayve](https://arxiv.org/pdf/1912.00177.pdf)
 3. [End-to-end Driving via Conditional Imitation Learning - Codevilla et al.](https://arxiv.org/pdf/1710.02410.pdf)
 
 # [Github Repository](to add)
