new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -13,6 +13,25 @@ title: The PI-Mobile, an autonomous lego car powered by Raspberry Pi
   gtag('config', 'UA-145347384-1');
 </script>
 
+<style TYPE="text/css">
+code.has-jax {font: inherit; font-size: 100%; background: inherit; border: inherit;}
+</style>
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+    tex2jax: {
+        inlineMath: [['$','$'], ['\\(','\\)']],
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'] // removed 'code' entry
+    }
+});
+MathJax.Hub.Queue(function() {
+    var all = MathJax.Hub.getAllJax(), i;
+    for(i = 0; i < all.length; i += 1) {
+        all[i].SourceElement().parentNode.className += ' has-jax';
+    }
+});
+</script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS_HTML-full"></script>
+
 When we started talking about this project with [Matthias](https://www.linkedin.com/in/matthias-cremieux-4b1222153/)), we knew that both building a Lego motorized car, and learning to drive with real-life Deep Reinforcement Learning was [possible](https://arxiv.org/pdf/1807.00412.pdf). However, we wanted to do both at the same time. We recently acquired a Raspberry Pi 4b and knew that the power limitations set by the previous model vanished. However, we didn't know exactly how to fit everything into a lego car, and how to train it properly. We came up with 2 cars and 2 methods of learning :
 
 * a first model (that looks terrible), driving with a Deep Reinforcement Learning Agent
@@ -220,7 +239,9 @@ Now that we have a new car and a new track, it is time to talk about the models 
 
 ### Imitation Learning
 
+Let $\mathcal{O}$ be the set of possible observations. In our case, it is the input from our camera. Let $\mathcal{A}$ the set of possible actions, here it could be turn left or right or change the speed. Let's suppose we have a dataset $\mathcal{D}$ made of observation-action pairs $(o_i,a_i)$, collected from our driving for example. 
 
+The idea behind Imitation Learning is to learn a policy $\pi$ mapping observations to actions : $\pi _{\theta} : \mathcal(O) \leftarrow \mathcal(A)$.
 
 # References :  
 
