new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -241,7 +241,7 @@ Now that we have a new car and a new track, it is time to talk about the models 
 
 Let $\mathcal{O}$ be the set of possible observations. In our case, it is the input from our camera. Let $\mathcal{A}$ the set of possible actions, here it could be turn left or right or change the speed. Let's suppose we have a dataset $\mathcal{D}$ made of observation-action pairs $(o_i,a_i)$, collected from our driving for example. 
 
-The idea behind Imitation Learning is to learn a policy $\pi$ mapping observations to actions : $\pi _{\theta} : \mathcal(O) \leftarrow \mathcal(A)$. The policy would allow to car to know which actions to performs depending on the observation: the camera input, according to the driving we've done before.
+The idea behind Imitation Learning is to learn a policy $\pi$ mapping observations to actions : $\pi _{\theta} : \mathcal(O) \rightarrow \mathcal(A)$. The policy would allow to car to know which actions to performs depending on the observation: the camera input, according to the driving we've done before.
 
 # References :  
 
