--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -241,7 +241,15 @@ Now that we have a new car and a new track, it is time to talk about the models 
 
 Let $\mathcal{O}$ be the set of possible observations. In our case, it is the input from our camera. Let $\mathcal{A}$ the set of possible actions, here it could be turn left or right or change the speed. Let's suppose we have a dataset $\mathcal{D}$ made of observation-action pairs $(o_i,a_i)$, collected from our driving for example. 
 
-The idea behind Imitation Learning is to learn a policy $\pi$ mapping observations to actions, $\pi _{\theta} : \mathcal(O) \rightarrow \mathcal(A)$. The policy would allow to car to know which actions to performs depending on the observation: the camera input, according to the driving we've done before.
+The idea behind Imitation Learning is to learn a policy $\pi$ mapping observations to actions, $\pi _{\theta} : \mathcal(O) \rightarrow \mathcal(A)$. The policy would allow the car to know which actions to performs depending on the observation: the camera input, according to the driving we've done before.
+
+The policy can then be trained by minimizing the distance between the policy $\pi _{\theta} (o_t)$ and the expert's actions $a_t$. However, in some cases, the expert's action is not enough. For example, our car might have the possibility to turn left or right in some cases and we need to tell it what it should do: this is Conditional Imitation Learning.
+
+### Conditional Imitation Learning
+
+The framework is the same as above, but we add a commande $c_t$, expressing the expert's intent when the policy is predicting an action to do. The mapping now takes the following form : $\pi _ {\theta} (o_t, c_t)$. The minimization process changes to:
+
+$\min\limits_{\theta} \displaystyle \sum_{t} \mathcal{L} (\pi _ {\theta} (o_t, c_t),a_t)$
 
 # References :  
 
