--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -251,6 +251,8 @@ The framework is the same as above, but we add a commande $c_t$, expressing the 
 
 $\min\limits_{\theta} \displaystyle \sum_{t} \mathcal{L} (\pi _ {\theta} (o_t, c_t),a_t)$
 
+Let's now dive into the model we used and the dataset we collected :
+
 # References :  
 
 1. [Learning to Drive in a day - Wayve](https://arxiv.org/pdf/1807.00412.pdf)
