new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -248,9 +248,9 @@ The policy can then be trained by minimizing the distance between the policy $\p
 ### Conditional Imitation Learning
 
 The framework is the same as above, but we add a commande $c_t$, expressing the expert's intent when the policy is predicting an action to do. The mapping now takes the following form : $\pi _ {\theta} (o_t, c_t)$. The minimization process changes to:
-
+<p align="center">
 $\min\limits_{\theta} \displaystyle \sum_{t} \mathcal{L} (\pi _ {\theta} (o_t, c_t),a_t)$
-
+</p>
 Let's now dive into the model we used and the dataset we collected :
 
 # References :  
