new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -254,7 +254,9 @@ $\min\limits_{\theta} \displaystyle \sum_{t} \mathcal{L} (\pi _ {\theta} (o_t, c
 
 Let's now dive into the model we used and the dataset we collected :
 
-## Model 
+## Model & Dataset
+
+### Model
 
 
 
