new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -107,7 +107,7 @@ We used a Deep Q-learning agent to train our car to drive, with some miners modi
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/algo-1.png">
 </p>
 
-A more detailled explanation of Deep Reinforcement Learning is available on a previous blog post and paper.
+A more detailed explanation of Deep Reinforcement Learning is available on a previous blog post and paper.
 
 Regarding the reward, we used a simple function: 1 at every step, except when the car fails (-1) or when it reaches the end of the trach (time spent on the track). The goal is to drive correctly and as fast as it could. 
 
@@ -180,7 +180,7 @@ Now that we knew that our car could learn to drive on its own, we wanted to make
 
 ## Structure 
 
-We kept the same main composants (Raspberry Pi 4, BrickPi and 3 motors) but changed the rest of the car. We used a [Lego Technic Porsche 911](https://www.amazon.fr/LEGO-Technic-Porsche-42096-construction/dp/B07FP6QNQ7/ref=asc_df_B07FP6QNQ7/?tag=googshopfr-21&linkCode=df0&hvadid=314587880581&hvpos=&hvnetw=g&hvrand=10330215336837655036&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9056237&hvtargid=aud-882886963594:pla-586194956307&psc=1&tag=&ref=&adgrpid=66274120487&hvpone=&hvptwo=&hvadid=314587880581&hvpos=&hvnetw=g&hvrand=10330215336837655036&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9056237&hvtargid=aud-882886963594:pla-586194956307) model as a base for the rest of the car. 
+We kept the same main pieces (Raspberry Pi 4, BrickPi, and 3 motors) but changed the rest of the car. We used a [Lego Technic Porsche 911](https://www.amazon.fr/LEGO-Technic-Porsche-42096-construction/dp/B07FP6QNQ7/ref=asc_df_B07FP6QNQ7/?tag=googshopfr-21&linkCode=df0&hvadid=314587880581&hvpos=&hvnetw=g&hvrand=10330215336837655036&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9056237&hvtargid=aud-882886963594:pla-586194956307&psc=1&tag=&ref=&adgrpid=66274120487&hvpone=&hvptwo=&hvadid=314587880581&hvpos=&hvnetw=g&hvrand=10330215336837655036&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9056237&hvtargid=aud-882886963594:pla-586194956307) model as a base for the rest of the car. 
 
 Our goal was to use the following blueprint : 
 
@@ -195,9 +195,9 @@ Our goal was to use the following blueprint :
 However, we had to make some modifications, mainly because of 2 things: 
 
 * The suspension system at the back of the car was not compatible with our Large motors
-* The case used for the Raspberry Pi + BrickPi  was not made for a Raspberry Pi 4, and therefore was not as robust as it should have been.
+* The case used for the Raspberry Pi + BrickPi was not made for a Raspberry Pi 4, and therefore was not as robust as it should have been.
 
-We removed the V6 engine and replaced it by the Raspberry Pi and the batteries. We also made some modifications to insert the Lego Rotor at the front, and the 2 Lego motors at the back. Using this as a baseline allows the car to be much more stable and with a more precise steering system. The first version also had a tendency to break at the middle of the chassis, this doesn't happen anymore. 
+We removed the V6 engine and replaced it by the Raspberry Pi and the batteries. We also made some modifications to insert the Lego Rotor at the front, and the 2 Lego motors at the back. Using this as a baseline allows the car to be much more stable and with a more precise steering system. The first version also tended to break in the middle of the chassis; this doesn't happen anymore. 
 
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/car-v2-debut.jpeg">
@@ -210,7 +210,7 @@ Chassis of the PI-Mobile V2, with the 2 motors and the Raspberry Pi/BrickPi in t
 
 ## The track 
 
-We wanted to be a bit more ambitious, and step aside from the small inside track we used for the first car. We used a small pathway around my home as a circuit. This pathway lies inside a large garden, making it easy to define where the car should drive, and makes a loop: exactly what we needed.
+We wanted to be a bit more ambitious and step aside from the small inside track we used for the first car. We used a small pathway around my home as a circuit. This pathway lies inside a large garden, making it easy to define where the car should drive and makes a loop: precisely what we needed.
 
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/track-2.png">
@@ -221,7 +221,7 @@ We wanted to be a bit more ambitious, and step aside from the small inside track
 Track used to gather data for the PI-Mobile V2. Track is around 400 meters long.</em>
 </center>
 
-We would then use the rest of the pathway for testing our model. An example of such pathway is available below : 
+We would then use the rest of the pathway for testing our model. An example of such a pathway is available below : 
 
 
 <p align="center">
@@ -239,11 +239,11 @@ Now that we have a new car and a new track, it is time to talk about the models 
 
 ### Imitation Learning
 
-Let $\mathcal{O}$ be the set of possible observations. In our case, it is the input from our camera. Let $\mathcal{A}$ the set of possible actions, here it could be turn left or right or change the speed. Let's suppose we have a dataset $\mathcal{D}$ made of observation-action pairs $(o_i,a_i)$, collected from our driving for example. 
+Let $\mathcal{O}$ be the set of possible observations. In our case, it is the input from our camera. Let $\mathcal{A}$ the set of possible actions, here it could be turn left or right or change the speed. Let's suppose we have a dataset $\mathcal{D}$ made of observation-action pairs $(o_i,a_i)$, collected from our driving, for example. 
 
-The idea behind Imitation Learning is to learn a policy $\pi$ mapping observations to actions, $\pi _{\theta} : \mathcal{O} \rightarrow \mathcal{A}$. The policy would allow the car to know which actions to performs depending on the observation: the camera input, according to the driving we've done before.
+The idea behind Imitation Learning is to learn a policy $\pi$ mapping observations to actions, $\pi _{\theta} : \mathcal{O} \rightarrow \mathcal{A}$. The policy would allow the car to know which actions to perform depending on the observation: the camera input, according to the driving we've done before.
 
-The policy can then be trained by minimizing the distance between the policy $\pi _{\theta} (o_t)$ and the expert's actions $a_t$. However, in some cases, the expert's action is not enough. For example, our car might have the possibility to turn left or right in some cases and we need to tell it what it should do: this is Conditional Imitation Learning.
+The policy can then be trained by minimizing the distance between the policy $\pi _{\theta} (o_t)$ and the expert's actions $a_t$. However, in some cases, the expert's action is not enough. For example, our car might have the possibility to turn left or right in some cases, and we need to tell it what it should do: this is Conditional Imitation Learning.
 
 ### Conditional Imitation Learning
 
