new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -258,7 +258,9 @@ Let's now dive into the model we used and the dataset we collected :
 
 ### Model
 
+### Dataset 
 
+## Results
 
 # References :  
 
