--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: The PI-Mobile, an autonomous lego car powered by Raspberry Pi 
+title: The PI-Mobile, a self-driving Lego car powered by Raspberry Pi 
 ---
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
