new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -258,6 +258,8 @@ Let's now dive into the model we used and the dataset we collected :
 
 ### Model
 
+We kept the same neural network base, with a MobileNetV2 pretrained on ImageNet. 
+
 ### Dataset 
 
 ## Results
