--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -32,7 +32,7 @@ MathJax.Hub.Queue(function() {
 </script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS_HTML-full"></script>
 
-When we started talking about this project with [Matthias](https://www.linkedin.com/in/matthias-cremieux-4b1222153/), we knew that both building a Lego motorized car, and learning to drive with real-life Deep Reinforcement Learning was [possible](https://arxiv.org/pdf/1807.00412.pdf). However, we wanted to do both at the same time. We recently acquired a Raspberry Pi 4b and knew that the power limitations set by the previous model vanished. However, we didn't know exactly how to fit everything into a lego car, and how to train it properly. We came up with 2 cars and used 2 methods of learning :
+When we started talking about this project with [Matthias](https://www.linkedin.com/in/matthias-cremieux-4b1222153/) and then [Arthur](https://www.linkedin.com/in/arthur-verrez/), we knew that both building a Lego motorized car, and learning to drive with real-life Deep Reinforcement Learning was [possible](https://arxiv.org/pdf/1807.00412.pdf). However, we wanted to do both at the same time. We also wanted to try another approach: Imitation Learning. We recently acquired a Raspberry Pi 4b and knew that the power limitations set by the previous model vanished. However, we didn't know exactly how to fit everything into a lego car, and how to train it properly. We came up with 2 cars and used 2 methods of learning :
 
 * a first model (that looks terrible), driving with a Deep Reinforcement Learning Agent
 * a much better car, driving with an Imitation Learning algorithm
@@ -266,7 +266,39 @@ We kept the same neural network base, with a MobileNetV2 pretrained on ImageNet:
 
 ### Dataset 
 
+We drove the car for around 15 minutes on the track, gathering around 9000 frames with inputs and conditions. We used 5000 frames for the training, 2000 for the validation and 2000 for testing. However, because of another steering issue, the car was naturally going to the left when we where inputing a forward command. Therefore, most of the driving consisted of inputing forward and right to make sure the right would stay on track. Because of this, only a few left inputs were issued, mostly for large turns. This can be seen below : 
+
+<p align="center">
+  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/stats-IL.png">
+</p>
+
+<center>
+<em>
+Distribution of the input and timestamp on the dataset</em>
+</center>
+
+We trained the model twice: once without data augmentation and once with. The data augmentation consisted of adding some random :
+* brightness
+* Small rotation
+* Small height and width translations
+
+The model without data augmentation gave poor results, especially during our first test session where the time of day and weather was completely different. This emphasizes the fact that the training dataset must generalize to real world testing: different weather, different lighting, different road style. This data augmentations made the car going from a complete failure to an acceptable robot. 
+
+Overall, we should have made a better dataset, mainly making sure we had no steering issues. This made the testing difficult, forcing us to add an artificial left steering and to make the car starts with the proper steering (same angle as in the dataset). 
+
 ## Results
+
+Nevertheless, we achieved good results with the augmented dataset. The predictions made by the model on the testing dataset are available below : 
+
+<p align="center">
+  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/car-v2.gif">
+</p>
+
+We also tested the car on another portion of the track, although with similar weather conditions from the training dataset : 
+
+<p align="center">
+  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/car-v2.gif">
+</p>
 
 # References :  
 
@@ -274,4 +306,3 @@ We kept the same neural network base, with a MobileNetV2 pretrained on ImageNet:
 2. [Urban Driving with Conditional Imitation Learning - Wayve](https://arxiv.org/pdf/1912.00177.pdf)
 3. [End-to-end Driving via Conditional Imitation Learning - Codevilla et al.](https://arxiv.org/pdf/1710.02410.pdf)
 
-# [Github Repository](to add )
