--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -278,7 +278,7 @@ Distribution of the input and timestamp on the dataset</em>
 </center>
 
 We trained the model twice: once without data augmentation and once with. The data augmentation consisted of adding some random :
-* brightness
+* Brightness
 * Small rotation
 * Small height and width translations
 
@@ -297,7 +297,7 @@ Nevertheless, we achieved good results with the augmented dataset. The predictio
 We also tested the car on another portion of the track, although with similar weather conditions from the training dataset : 
 
 <p align="center">
-  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/car-v2.gif">
+  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/car-v2-live.gif">
 </p>
 
 # References :  
