--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -299,6 +299,10 @@ We also tested the car on another portion of the track, although with similar we
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/car-v2-live.gif">
 </p>
+<center>
+<em>
+Self driving car V2, some outside modifications were made to make an easier access to the RaspberryPi and the batteries.
+</center>
 
 # References :  
 
