--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -301,7 +301,7 @@ We also tested the car on another portion of the track, although with similar we
 </p>
 <center>
 <em>
-Self driving car V2, some outside modifications were made to make an easier access to the RaspberryPi and the batteries.
+Self driving car V2, some outside modifications were made to make an easier access to the RaspberryPi and the batteries.</em>
 </center>
 
 # References :  
