--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -266,7 +266,7 @@ We kept the same neural network base, with a MobileNetV2 pretrained on ImageNet:
 
 ### Dataset 
 
-We drove the car for around 15 minutes on the track, gathering around 9000 frames with inputs and conditions. We used 5000 frames for the training, 2000 for the validation and 2000 for testing. However, because of another steering issue, the car was naturally going to the left when we where inputing a forward command. Therefore, most of the driving consisted of inputing forward and right to make sure the right would stay on track. Because of this, only a few left inputs were issued, mostly for large turns. This can be seen below : 
+We drove the car for around 15 minutes on the track, gathering around 9000 frames with inputs and conditions. We used 5000 frames for the training, 2000 for the validation and 2000 for testing. However, because of another steering issue, the car was naturally going to the left when we where inputing a forward command. Therefore, most of the driving consisted of inputing forward and right to make sure the right would stay on track. Because of this, only a few left inputs were issued, mostly for large turns. This can be seen below. We also splitted the dataset into smaller episode to make sure that the Raspberry stoping itself would not delete a file too large.
 
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/stats-IL.png">
