--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -32,6 +32,8 @@ MathJax.Hub.Queue(function() {
 </script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS_HTML-full"></script>
 
+- diagramme au debut sur les blocks
+
 When we started talking about this project with [Matthias](https://www.linkedin.com/in/matthias-cremieux-4b1222153/) and then [Arthur](https://www.linkedin.com/in/arthur-verrez/), we knew that both building a Lego motorized car, and learning to drive with real-life Deep Reinforcement Learning was [possible](https://arxiv.org/pdf/1807.00412.pdf). However, we wanted to do both at the same time. We also wanted to try another approach: Imitation Learning. We recently acquired a Raspberry Pi 4b and knew that the power limitations set by the previous model vanished. However, we didn't know exactly how to fit everything into a lego car, and how to train it properly. We came up with 2 cars and used 2 methods of learning :
 
 * a first model (that looks terrible), driving with a Deep Reinforcement Learning Agent
@@ -63,11 +65,11 @@ The first one drove on an inside track built in my home, while the second drove 
 
 ## Assembling the car
 
-The first step of building a lego car is building its structure and deciding the location of each component in the car to make it as compact as possible. Considering that we did not look at any car blueprint or tutorial to build it, it was almost like reinventing the car in a way, and consequently, the car we built is not the prettiest of all time! However, it does drive, although it is not that fast nor that smooth. 
+The first step of building a lego car is building its structure and deciding the location of each component in the car to make it as compact as possible. We started by building each block and then assembled them. It resulted in a working car, but not in the fastest nor best looking one.
 
 ### The structure
 
-We decided to choose a 3-engines solution: two at the back of the car that would power each wheel separately, and one at the front, that would be powering the steering system that we would've built.
+We decided to choose a 3-engines solution: two at the back of the car that power each wheel separately, and one at the front powering the steering system that we built.
 
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/components.jpeg">
@@ -79,7 +81,7 @@ From top left to bottom right : Lego Mindstorm cables, RaspberyPi 4b + BrickPi, 
 </em>
 </center>
 
-We chose to separate the car's electronic system in two halves: one half would be the core of the car and would be linked to the motors, power them, and would take care of the DRL part of the project, and the second half would be here to cool the first part, as all the operations listed above are energy-consuming. 
+We chose to separate the car's electronic system in two halves: one half is the core of the car and will be linked to the motors, powering them, and will take care of the DRL part of the project. The second half is here to cool the first part, as all the operations listed above are energy-consuming. 
 
 The core part consists of a Raspberry Pi 4b (we chose this device to be the center of all the operations because of its vast specifications compared to the Raspberry Pi 3b) and a card from [Dexter Industries](https://www.dexterindustries.com/) that manages the link with the lego technics. In contrast, the second part consists of a battery powering a Raspberry Pi 3 that powers a small fan, installed in between the two cards of the car's core. While using a Raspberry Pi 3 to power a fan seems a bit of an overkill; it also allows us convenient flexibility in programming, were we to decide to use a Master/slave architecture to compute the DRL part if the RP4 capped its power due to overheating. 
 
@@ -89,7 +91,7 @@ We also used a raspberry camera on top of the car. This camera was the only inpu
 
 ### The track 
 
-The PI-Mobile V1 trained on a track we built inside my house. It is made of paper and is 8 meters long. However, it has a bridge in the middle, a bridge the car could never learn to pass properly (because it struggles to go only forward, the fault to a wrong steering conception). Because of this, we split the track into 2 parts: a training part and a testing part :
+The PI-Mobile V1 trained on a track we built inside my house. It is made of paper and is 8 meters long. However, it has a bridge in the middle, a bridge the car could never learn to pass properly (it struggled to go only forward because of a faulty steering system). Because of this, we split the track into 2 parts: a training part and a testing part :
 
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/track-1.png">
@@ -266,7 +268,7 @@ We kept the same neural network base, with a MobileNetV2 pretrained on ImageNet:
 
 ### Dataset 
 
-We drove the car for around 15 minutes on the track, gathering around 9000 frames with inputs and conditions. We used 5000 frames for the training, 2000 for the validation and 2000 for testing. However, because of another steering issue, the car was naturally going to the left when we where inputing a forward command. Therefore, most of the driving consisted of inputing forward and right to make sure the right would stay on track. Because of this, only a few left inputs were issued, mostly for large turns. This can be seen below. We also splitted the dataset into smaller episode to make sure that the Raspberry stoping itself would not delete a file too large.
+We drove the car for around 15 minutes on the track, gathering around 9000 frames with inputs and controls (the controls were added by hand afterwards, when 2 decisions were possible). We used 5000 frames for the training, 2000 for the validation and 2000 for testing. However, because of another steering issue, the car was naturally going to the left when we where inputing a forward command. Therefore, most of the driving consisted of inputing forward and right to make sure the right would stay on track. Because of this, only a few left inputs were issued, mostly for large turns. This can be seen below. We also splitted the dataset into smaller episode to make sure that the Raspberry stoping itself would not delete a file too large.
 
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/stats-IL.png">
@@ -284,7 +286,7 @@ We trained the model twice: once without data augmentation and once with. The da
 
 The model without data augmentation gave poor results, especially during our first test session where the time of day and weather was completely different. This emphasizes the fact that the training dataset must generalize to real world testing: different weather, different lighting, different road style. This data augmentations made the car going from a complete failure to an acceptable robot. 
 
-Overall, we should have made a better dataset, mainly making sure we had no steering issues. This made the testing difficult, forcing us to add an artificial left steering and to make the car starts with the proper steering (same angle as in the dataset). 
+Overall, we should have made a better dataset, mainly making sure we had no steering issues. This made the testing difficult, forcing us to add an artificial left steering and to make the car starts with the proper same angle as in the dataset. 
 
 ## Results
 
