--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -306,6 +306,10 @@ We also tested the car on another portion of the track, although with similar we
 Self driving car V2, some outside modifications were made to make an easier access to the RaspberryPi and the batteries.</em>
 </center>
 
+# Conclusion : 
+
+Overall, it was an extremely fun project to do, and more importantly, did not require a lot of complex knowledge. The car can be build with Lego, the motor and the BrickPi from Dexter Industry is easy to use with Python, and the Deep Learning algorithms we used can be found anywhere. It was actually really interesting to see how we could put every "tech brick" one after the other, and end up with a working self driving car. Granted, following a track and making a few turns is far away from the demanding needs of a real autonomous car, interacting with others, but the basics of driving can still be learned with simple components.
+
 # References :  
 
 1. [Learning to Drive in a day - Wayve](https://arxiv.org/pdf/1807.00412.pdf)
